fix: fix z-index

--- a/src/app/pages/product/Product.scss
+++ b/src/app/pages/product/Product.scss
@@ -164,6 +164,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 
   &.hidden {
     display: none;
